--- a/index.html
+++ b/index.html
@@ -636,6 +636,38 @@
     pointer-events:none;
     z-index:3000;
   }
+    .scoreRow{
+  display:flex;
+  flex-direction:column;
+  gap:8px;
+  margin:12px 0;
+}
+
+.scoreTop{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  font-weight:900;
+  color: var(--navy);
+  font-size:13px;
+}
+
+.scoreBarWrap{
+  width:100%;
+  height:12px;
+  border-radius:999px;
+  background: rgba(11,31,77,.10);
+  overflow:hidden;
+  border:1px solid rgba(11,31,77,.10);
+}
+
+.scoreBar{
+  height:100%;
+  width:0%;
+  border-radius:999px;
+  background: linear-gradient(90deg, var(--orange), var(--magenta));
+  transition: width .6s ease;
+}
   </style>
 </head>
 
@@ -842,6 +874,12 @@
     Invite a colleague to explore visibility in action
   </div>
 
+  <div class="actions" style="margin-top:12px;">
+  <button type="button" class="secondary" id="openScoreBtn">
+    See live conference results
+  </button>
+</div>
+
   <div style="margin-top:12px; display:flex; gap:14px; align-items:center; flex-wrap:wrap;">
     <img id="shareQr"
          alt="QR code"
@@ -1008,6 +1046,15 @@ Visibility turns reliability into momentum.`
   const recTextEl = document.getElementById("recText");
   const closeResultsBtn = document.getElementById("closeResultsBtn");
   const backBtn = document.getElementById("backBtn");
+
+ // 🔥 ADD THIS RIGHT HERE
+// Live Scoreboard Overlay
+const scoreOverlay = document.getElementById("scoreOverlay");
+const scoreMeta = document.getElementById("scoreMeta");
+const scoreList = document.getElementById("scoreList");
+const closeScoreBtn = document.getElementById("closeScoreBtn");
+const refreshScoreBtn = document.getElementById("refreshScoreBtn"); 
+  
   // Games overlay (used in a few handlers)
   const gamesOverlay = document.getElementById("gamesOverlay");
 
@@ -1195,6 +1242,82 @@ else if (n === 3){
 
   function closeResults(){ resultsOverlay.classList.add("hidden"); }
 
+  // IMPORTANT: use your Apps Script Web App URL here
+const CONFERENCE_ENDPOINT = "https://script.google.com/macros/s/AKfycbxQfYi_Xp3PXd8Jw34YrHAhPVTunJf091kvs-F916MwRUhaLOrYLrKCvVcd5uuncUAP/exec";
+
+// label map (must match your ids)
+const priorityOrder = [
+  { id:"px", label:"Patient Experience" },
+  { id:"quality", label:"Quality & Safety" },
+  { id:"retention", label:"Retention" },
+  { id:"onboarding", label:"Onboarding" },
+  { id:"culture", label:"Team Culture" },
+  { id:"staffing", label:"Staffing Stability" },
+];
+
+// Fetch + render scoreboard
+async function loadScoreboard(){
+  scoreMeta.textContent = "Loading…";
+  scoreList.innerHTML = "";
+
+  try{
+    // Your Apps Script should return JSON like:
+    // { total: 123, counts: { px: 40, quality: 60, ... } }
+    const res = await fetch(CONFERENCE_ENDPOINT + "?action=stats", { method:"GET" });
+    if (!res.ok) throw new Error("HTTP " + res.status);
+
+    const json = await res.json();
+    const total = Number(json.total || 0);
+    const counts = json.counts || {};
+
+    scoreMeta.textContent = total
+      ? `${total} responses today`
+      : "No responses yet";
+
+    // Build rows
+    const rows = priorityOrder.map(p=>{
+      const c = Number(counts[p.id] || 0);
+      const pct = total ? Math.round((c/total)*100) : 0;
+
+      return `
+        <div class="scoreRow">
+          <div class="scoreTop">
+            <span>${p.label}</span>
+            <span>${pct}%</span>
+          </div>
+          <div class="scoreBarWrap">
+            <div class="scoreBar" style="width:${pct}%;"></div>
+          </div>
+        </div>
+      `;
+    }).join("");
+
+    scoreList.innerHTML = rows;
+
+  }catch(err){
+    console.error("Scoreboard load failed:", err);
+    scoreMeta.textContent = "Couldn’t load results. Check endpoint + Apps Script.";
+    scoreList.innerHTML = `
+      <div class="box">
+        <div class="boxtitle">Troubleshooting</div>
+        <p class="boxtext">Make sure your Apps Script is deployed as a Web App and supports <b>?action=stats</b> returning JSON.</p>
+      </div>
+    `;
+  }
+}
+
+  // ✅ NOW paste this right here:
+
+if (closeScoreBtn){
+  closeScoreBtn.addEventListener("click", ()=>{
+    scoreOverlay.classList.add("hidden");
+  });
+}
+
+if (refreshScoreBtn){
+  refreshScoreBtn.addEventListener("click", loadScoreboard);
+}
+  
   function showStory(){
   const key = picked[picked.length - 1] || picked[0];
   const s = storyMap[key] || {
@@ -1553,5 +1676,33 @@ document.addEventListener("click", function(e){
   renderPicked();
 </script>
   <canvas id="confettiCanvas"></canvas>
+<!-- Live Scoreboard Overlay -->
+<div id="scoreOverlay" class="overlay hidden" role="dialog" aria-modal="true" aria-label="Live conference results">
+  <div class="modal">
+    <div class="modalTop">
+      <div>
+        <h2 class="title" style="margin-top:0;">Live conference results</h2>
+        <p class="subtext" id="scoreMeta">Loading…</p>
+      </div>
+      <button class="closeBtn" id="closeScoreBtn" aria-label="Close">✕</button>
+    </div>
+
+    <div id="scoreList" style="margin-top:14px;"></div>
+
+    <div class="actions actionsStacked" style="margin-top:18px;">
+      <a
+        id="scoreBookCall"
+        href="https://calendly.com/tim-lafrankie-gratiahealth/gratia-alignment-session"
+        target="_blank"
+        rel="noopener"
+        class="btn primary"
+        style="width:100%;"
+      >
+        Book a strategy call
+      </a>
+      <button class="secondary subtleBack" id="refreshScoreBtn" type="button">Refresh</button>
+    </div>
+  </div>
+</div>
 </body>
 </html>
