--- a/index.html
+++ b/index.html
@@ -298,7 +298,29 @@
       border:1px solid rgba(255,255,255,.18);
       box-shadow: 0 10px 24px rgba(60,141,204,.16);
     }
+
+    /* 🔥 Conference scoreboard button */
+.conferenceBtn{
+  width:100%;
+  background: var(--orange);
+  border:none;
+  color:white;
+  font-weight:950;
+  box-shadow: 0 10px 26px rgba(245,166,35,.35);
+  animation: subtlePulse 4s ease-in-out infinite; 
+}
+
+.conferenceBtn:hover{
+  transform: translateY(-2px);
+  box-shadow: 0 12px 30px rgba(245,166,35,.45);
+}
     button:disabled{ opacity:.45; cursor:not-allowed; box-shadow:none; }
+
+    @keyframes subtlePulse{
+  0%   { box-shadow: 0 10px 26px rgba(245,166,35,.35); }
+  50%  { box-shadow: 0 14px 34px rgba(245,166,35,.55); }
+  100% { box-shadow: 0 10px 26px rgba(245,166,35,.35); }
+}
 
     /* Replace pulse */
     .spot.pulse { animation: pulse .22s ease; }
@@ -875,7 +897,7 @@
   </div>
 
   <div class="actions" style="margin-top:12px;">
-  <button type="button" class="secondary" id="openScoreBtn">
+  <button type="button" class="conferenceBtn" id="openScoreBtn">
     See live conference results
   </button>
 </div>
