--- a/index.html
+++ b/index.html
@@ -690,6 +690,37 @@
   background: linear-gradient(90deg, var(--orange), var(--magenta));
   transition: width .6s ease;
 }
+.shareRow{
+  margin-top:16px;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  gap:14px;
+}
+
+.qrImage{
+  width:120px;
+  height:120px;
+  border-radius:14px;
+  border:2px solid rgba(11,31,77,.18);
+  background:#fff;
+  padding:10px;
+}
+
+.shareButtons{
+  display:flex;
+  gap:12px;
+  justify-content:center;
+  align-items:center;
+}
+
+.shareBtn{
+  min-width:140px;
+  padding:12px 16px;
+  border-radius:12px;
+  font-weight:900;
+}
+    
   </style>
 </head>
 
