--- a/index.html
+++ b/index.html
@@ -949,6 +949,7 @@
   </div>
 </div>
 
+<script>
 // Intro screen controls
 const introScreen = document.getElementById("introScreen");
 const startBtn = document.getElementById("startBtn");
@@ -1286,9 +1287,6 @@ else if (n === 3){
   }
 
   function closeResults(){ resultsOverlay.classList.add("hidden"); }
-
-  // IMPORTANT: use your Apps Script Web App URL here
-const CONFERENCE_ENDPOINT = "https://script.google.com/macros/s/AKfycbxQfYi_Xp3PXd8Jw34YrHAhPVTunJf091kvs-F916MwRUhaLOrYLrKCvVcd5uuncUAP/exec";
 
 // label map (must match your ids)
 const priorityOrder = [
