--- a/index.html
+++ b/index.html
@@ -1475,6 +1475,7 @@ storyBackBtn.addEventListener("click", ()=>{
   // Scoreboard open button
 if (openScoreBtn){
   openScoreBtn.addEventListener("click", ()=>{
+    console.log("🔥 Score button clicked");
     scoreOverlay.classList.remove("hidden");
     loadScoreboard();
   });
