--- a/index.html
+++ b/index.html
@@ -1472,10 +1472,10 @@ storyBackBtn.addEventListener("click", ()=>{
 
   closeLeadBtn.addEventListener("click", closeLead);
 
-  // Scoreboard open button
+ // Scoreboard open button
 if (openScoreBtn){
   openScoreBtn.addEventListener("click", ()=>{
-    console.log("🔥 Score button clicked");
+    console.log("Scoreboard button clicked ✅");
     scoreOverlay.classList.remove("hidden");
     loadScoreboard();
   });
