--- a/index.html
+++ b/index.html
@@ -1038,10 +1038,10 @@ const storyMap = {
     kicker: "Patient Experience",
     text:
 `It’s 2:17 p.m.
-A patient’s family is anxious.
-A nurse pauses, explains, and stays present.
+Maria’s family is anxious at the bedside.
+Jay kneels, explains the plan, and stays for 60 seconds.
 
-That moment doesn’t show up on a dashboard—
+No dashboard tracks that moment—
 but it changes the room.
 
 When it’s visible, it becomes the standard.`
@@ -1050,8 +1050,8 @@ When it’s visible, it becomes the standard.`
     kicker: "Quality & Safety",
     text:
 `It’s 6:42 a.m.
-A near-miss is caught before it becomes an event.
-A quick check. A small correction. A safer shift.
+Tanya catches a near-miss during shift handoff—
+one small check before it becomes an event.
 
 Usually it disappears into the noise.
 
@@ -1061,10 +1061,10 @@ Visibility turns it into a repeatable habit.`
     kicker: "Retention",
     text:
 `It’s the end of a hard week.
-Your best nurse quietly keeps the unit steady—
-again.
+Your strongest nurse picks up the hardest patient—
+again—without being asked.
 
-Nobody sees the extra effort.
+Nobody sees the extra lift.
 Until you make it visible.
 
 Recognition becomes a reason to stay.`
@@ -1072,20 +1072,18 @@ Recognition becomes a reason to stay.`
   onboarding: {
     kicker: "Onboarding",
     text:
-`First week on the floor.
-A new hire is unsure, moving fast, trying to fit in.
+`Week one on the floor.
+A new hire hesitates at the med room, trying to move fast.
 
-One small win gets noticed.
-A teammate calls it out.
-
+A teammate calls out one win—out loud.
 That visibility turns anxiety into belonging.`
   },
   culture: {
     kicker: "Team Culture",
     text:
-`It’s a busy shift change.
-A small assist prevents a pile-up.
-A quick “I’ve got you” changes the tone.
+`It’s shift change.
+A quick “I’ve got you” prevents a pile-up—
+one small assist that keeps the unit steady.
 
 Most teams never capture that moment.
 
@@ -1095,12 +1093,12 @@ Visibility turns teamwork into culture.`
     kicker: "Staffing Stability",
     text:
 `It’s 4:55 p.m.
-A gap opens for night shift.
-Someone picks it up—because it’s seen and valued.
+An overnight gap opens.
+Someone grabs it—because reliability gets seen and rewarded.
 
 Coverage stops being last-minute chaos.
 
-Visibility turns reliability into momentum.`
+Visibility turns consistency into momentum.`
   }
 };
 
