--- a/index.html
+++ b/index.html
@@ -1035,70 +1035,76 @@ if (startBtn){
   // Short “moment on the floor” stories (one per priority)
 const storyMap = {
   px: {
-    kicker: "Patient Experience",
+    kicker: "PATIENT EXPERIENCE",
     text:
-`It’s 2:17 p.m.
-Maria’s family is anxious at the bedside.
-Jay kneels, explains the plan, and stays for 60 seconds.
+`2:17 p.m.
+A family is anxious at the bedside.
+A nurse pauses, explains, and stays present.
 
-No dashboard tracks that moment—
-but it changes the room.
+Result:
+An ordinary interaction becomes a moment of trust.
 
-When it’s visible, it becomes the standard.`
+That’s visibility.`
   },
   quality: {
-    kicker: "Quality & Safety",
+    kicker: "QUALITY & SAFETY",
     text:
-`It’s 6:42 a.m.
-Tanya catches a near-miss during shift handoff—
-one small check before it becomes an event.
+`6:42 a.m.
+A near-miss is caught before it becomes an event.
+A small check prevents a big consequence.
 
-Usually it disappears into the noise.
+Result:
+Safe habits become standard practice.
 
-Visibility turns it into a repeatable habit.`
+That’s visibility.`
   },
   retention: {
-    kicker: "Retention",
+    kicker: "RETENTION",
     text:
-`It’s the end of a hard week.
-Your strongest nurse picks up the hardest patient—
-again—without being asked.
+`End of a long week.
+Your strongest nurse holds the unit steady — again.
+No one asked. They just stepped in.
 
-Nobody sees the extra lift.
-Until you make it visible.
+Result:
+Commitment gets recognized before burnout sets in.
 
-Recognition becomes a reason to stay.`
+That’s visibility.`
   },
   onboarding: {
-    kicker: "Onboarding",
+    kicker: "ONBOARDING",
     text:
-`Week one on the floor.
-A new hire hesitates at the med room, trying to move fast.
+`First week on the floor.
+A new hire hesitates before a decision.
+A teammate coaches — and someone notices the growth.
 
-A teammate calls out one win—out loud.
-That visibility turns anxiety into belonging.`
+Result:
+Confidence builds faster than doubt.
+
+That’s visibility.`
   },
   culture: {
-    kicker: "Team Culture",
+    kicker: "TEAM CULTURE",
     text:
-`It’s shift change.
-A quick “I’ve got you” prevents a pile-up—
-one small assist that keeps the unit steady.
+`Shift change.
+One nurse jumps in to help without being asked.
+A quiet assist keeps the team moving.
 
-Most teams never capture that moment.
+Result:
+Support becomes the norm, not the exception.
 
-Visibility turns teamwork into culture.`
+That’s visibility.`
   },
   staffing: {
-    kicker: "Staffing Stability",
+    kicker: "STAFFING STABILITY",
     text:
-`It’s 4:55 p.m.
-An overnight gap opens.
-Someone grabs it—because reliability gets seen and rewarded.
+`4:55 p.m.
+A gap opens for night shift.
+Someone picks it up — because reliability gets seen and rewarded.
 
+Result:
 Coverage stops being last-minute chaos.
 
-Visibility turns consistency into momentum.`
+That’s visibility.`
   }
 };
 
