--- a/index.html
+++ b/index.html
@@ -369,12 +369,12 @@
 }
 
 .storyKicker{
-  font-size:12px;
-  letter-spacing:.8px;
+  font-size:14px;
+  letter-spacing:1px;
   text-transform:uppercase;
   font-weight:950;
-  color: rgba(11,31,77,.70);
-  margin-bottom:10px;
+  color: var(--magenta);
+  margin-bottom:12px;
 }
 
 .storyText{
