--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
 
   <div class="introSubtitle">Gratia Health presents</div>
   <h1 class="introTitle">The Visibility Challenge</h1>
-      <div class="introTagline">Make invisible moments visible.</div>
+      <div class="introTagline">Make the invisible visible.</div>
 
       <div class="introActions">
         <button id="startBtn" type="button">Start Game</button>
