--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>The Visibility Challenge</title>
+  <title>Game On: Workforce Impact Challenge</title>
   <style>
     :root{
       /* Gratia-inspired palette */
@@ -739,10 +739,10 @@
 
   <div class="introSubtitle">Gratia Health presents</div>
   <h1 class="introTitle">The Visibility Challenge</h1>
-      <div class="introTagline">Make the invisible visible.</div>
+      <div class="introTagline">Healthcare Leaders: What’s Driving Performance in Your System?.</div>
 
       <div class="introActions">
-        <button id="startBtn" type="button">Start Game</button>
+        <button id="startBtn" type="button">Start the Game</button>
       </div>
     </div>
   </div>
