--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
      class="introLogo" />
 
   <div class="introSubtitle">Gratia Health presents</div>
-  <h1 class="introTitle">The Visibility Challenge</h1>
+  <h1 class="introTitle">Game On: Workforce Impact Challenge</h1>
       <div class="introTagline">Healthcare Leaders: What’s Driving Performance in Your System?</div>
 
       <div class="introActions">
